--- a/appState.json
+++ b/appState.json
@@ -8,8 +8,7 @@
         "type": "DIRECTORY",
         "isDirectory": true,
         "children": [
-          "d6dd33be-5839-4536-99f3-228994b16180",
-          "e7fdb1cb-4abe-4f00-8193-e50520dca5d6"
+          "d6dd33be-5839-4536-99f3-228994b16180"
         ],
         "isRemovable": false,
         "filePath": "test1"
@@ -38,27 +37,16 @@
             "event": "{\n    \"key1\": \"value1\",\n    \"key2\": \"value2\",\n    \"key3\": \"value3\"\n}"
           }
         }
-      },
-      "e7fdb1cb-4abe-4f00-8193-e50520dca5d6": {
-        "id": "e7fdb1cb-4abe-4f00-8193-e50520dca5d6",
-        "parent": "ae78d98b-238e-41d7-a5e4-9cc6458e76a5",
-        "name": "add javascript file.js",
-        "type": "JS_FILE",
-        "isDirectory": false,
-        "children": [],
-        "isRemovable": true,
-        "filePath": "test1/add javascript file.js",
-        "code": "sdsdsdsd",
-        "triggers": []
       }
     },
-    "deletedFiles": [],
+    "deletedFiles": [
+      "test1/add javascript file.js"
+    ],
     "rootNode": "ae78d98b-238e-41d7-a5e4-9cc6458e76a5",
     "openFiles": [
-      "d6dd33be-5839-4536-99f3-228994b16180",
-      "e7fdb1cb-4abe-4f00-8193-e50520dca5d6"
+      "d6dd33be-5839-4536-99f3-228994b16180"
     ],
-    "currentFileId": "e7fdb1cb-4abe-4f00-8193-e50520dca5d6",
+    "currentFileId": "d6dd33be-5839-4536-99f3-228994b16180",
     "resources": {},
     "envVariables": [
       {
@@ -81,7 +69,7 @@
     "projectVersion": "1.0.0",
     "projectRegion": "us-east-1",
     "platform": "AWS",
-    "lastSave": 1540467124839
+    "lastSave": 1540467142148
   },
   "VCS_STATE": {
     "provider": "GitHub",
