--- a/appState.json
+++ b/appState.json
@@ -8,7 +8,8 @@
         "type": "DIRECTORY",
         "isDirectory": true,
         "children": [
-          "d6dd33be-5839-4536-99f3-228994b16180"
+          "d6dd33be-5839-4536-99f3-228994b16180",
+          "f451cd0b-0fc4-4d11-913a-ca9500805333"
         ],
         "isRemovable": false,
         "filePath": "test1"
@@ -42,14 +43,32 @@
             "event": "{\n    \"key1\": \"value1\",\n    \"key2\": \"value2\",\n    \"key3\": \"value3\"\n}"
           }
         }
+      },
+      "f451cd0b-0fc4-4d11-913a-ca9500805333": {
+        "id": "f451cd0b-0fc4-4d11-913a-ca9500805333",
+        "parent": "ae78d98b-238e-41d7-a5e4-9cc6458e76a5",
+        "name": "lambda2.js",
+        "type": "LAMBDA_FILE",
+        "isDirectory": false,
+        "children": [],
+        "isRemovable": true,
+        "filePath": "test1/lambda2.js",
+        "code": "exports.handler = function(event, context, callback) {\n    \n    callback(null, {\"message\": \"Successfully executed\"});\n}",
+        "triggers": [],
+        "config": {
+          "runtime": "nodejs8.10",
+          "timeout": 60,
+          "memory": 128
+        }
       }
     },
     "deletedFiles": [],
     "rootNode": "ae78d98b-238e-41d7-a5e4-9cc6458e76a5",
     "openFiles": [
-      "d6dd33be-5839-4536-99f3-228994b16180"
+      "d6dd33be-5839-4536-99f3-228994b16180",
+      "f451cd0b-0fc4-4d11-913a-ca9500805333"
     ],
-    "currentFileId": "d6dd33be-5839-4536-99f3-228994b16180",
+    "currentFileId": "f451cd0b-0fc4-4d11-913a-ca9500805333",
     "resources": {
       "apigusEast1hotspacesvendor16382dd9promopost": {
         "name": "apigusEast1hotspacesvendor16382dd9promopost",
@@ -102,7 +121,7 @@
     "projectVersion": "1.0.0",
     "projectRegion": "us-east-1",
     "platform": "AWS",
-    "lastSave": 1540738244646
+    "lastSave": 1540738516894
   },
   "VCS_STATE": {
     "provider": "GitHub",
