--- a/appState.json
+++ b/appState.json
@@ -47,12 +47,12 @@
       "f451cd0b-0fc4-4d11-913a-ca9500805333": {
         "id": "f451cd0b-0fc4-4d11-913a-ca9500805333",
         "parent": "ae78d98b-238e-41d7-a5e4-9cc6458e76a5",
-        "name": "lambda2.js",
+        "name": "lambdaRename.js",
         "type": "LAMBDA_FILE",
         "isDirectory": false,
         "children": [],
         "isRemovable": true,
-        "filePath": "test1/lambda2.js",
+        "filePath": "test1/lambdaRename.js",
         "code": "exports.handler = function(event, context, callback) {\n    \n    callback(null, {\"message\": \"Successfully executed\"});\n}",
         "triggers": [],
         "config": {
@@ -62,7 +62,9 @@
         }
       }
     },
-    "deletedFiles": [],
+    "deletedFiles": [
+      "test1/lambda2.js"
+    ],
     "rootNode": "ae78d98b-238e-41d7-a5e4-9cc6458e76a5",
     "openFiles": [
       "d6dd33be-5839-4536-99f3-228994b16180",
@@ -121,7 +123,7 @@
     "projectVersion": "1.0.0",
     "projectRegion": "us-east-1",
     "platform": "AWS",
-    "lastSave": 1540738516894
+    "lastSave": 1540738564421
   },
   "VCS_STATE": {
     "provider": "GitHub",
