--- a/appState.json
+++ b/appState.json
@@ -48,12 +48,12 @@
       "9cc7ec6d-c7c5-4b87-8e4e-c8e7fcfea81e": {
         "id": "9cc7ec6d-c7c5-4b87-8e4e-c8e7fcfea81e",
         "parent": "ae78d98b-238e-41d7-a5e4-9cc6458e76a5",
-        "name": "lambda2.js",
+        "name": "lambda.js",
         "type": "LAMBDA_FILE",
         "isDirectory": false,
         "children": [],
         "isRemovable": true,
-        "filePath": "test1/lambda2.js",
+        "filePath": "test1/lambda.js",
         "code": "exports.handler = function(event, context, callback) {\n    \n    callback(null, {\"message\": \"Successfully executed\"});\n}",
         "triggers": [],
         "config": {
@@ -152,7 +152,9 @@
         }
       }
     },
-    "deletedFiles": [],
+    "deletedFiles": [
+      "test1/lambda2.js"
+    ],
     "rootNode": "ae78d98b-238e-41d7-a5e4-9cc6458e76a5",
     "openFiles": [
       "d6dd33be-5839-4536-99f3-228994b16180",
@@ -161,7 +163,7 @@
       "3bedf9c9-685b-4974-8adb-7f236fe28220",
       "08003185-7d1a-4e48-9fc8-4cd8e2b3b509"
     ],
-    "currentFileId": "d6dd33be-5839-4536-99f3-228994b16180",
+    "currentFileId": "9cc7ec6d-c7c5-4b87-8e4e-c8e7fcfea81e",
     "resources": {
       "apigusEast1hotspacesvendor16382dd9promopost": {
         "name": "apigusEast1hotspacesvendor16382dd9promopost",
@@ -214,7 +216,7 @@
     "projectVersion": "1.0.0",
     "projectRegion": "us-east-1",
     "platform": "AWS",
-    "lastSave": 1540893566137
+    "lastSave": 1540893681158
   },
   "VCS_STATE": {
     "provider": "GitHub",
