add api gateway

--- a/appState.json
+++ b/appState.json
@@ -55,7 +55,12 @@
         "isRemovable": true,
         "filePath": "test1/lambda.js",
         "code": "let AWS = require('aws-sdk');\nconst ddb = new AWS.DynamoDB.DocumentClient();\n\nexports.handler = function (event, context, callback) {\n    ddb.scan({\n        TableName: 'Promotions'\n    }).promise().then(function (data) {\n        //your logic goes here\n    }).catch(function (err) {\n        //handle error\n    });\n\n    callback(null, { \"message\": \"Successfully executed\" });\n}",
-        "triggers": [],
+        "triggers": [
+          {
+            "resourceName": "apigusEast1hotspacesvendor16382dd9promopost",
+            "config": {}
+          }
+        ],
         "config": {
           "runtime": "nodejs8.10",
           "timeout": 60,
@@ -152,16 +157,10 @@
         }
       }
     },
-    "deletedFiles": [
-      "test1/lambda2.js"
-    ],
+    "deletedFiles": [],
     "rootNode": "ae78d98b-238e-41d7-a5e4-9cc6458e76a5",
     "openFiles": [
-      "d6dd33be-5839-4536-99f3-228994b16180",
-      "9cc7ec6d-c7c5-4b87-8e4e-c8e7fcfea81e",
-      "669fa892-c1ec-4535-aedc-1e52741bd4e2",
-      "3bedf9c9-685b-4974-8adb-7f236fe28220",
-      "08003185-7d1a-4e48-9fc8-4cd8e2b3b509"
+      "9cc7ec6d-c7c5-4b87-8e4e-c8e7fcfea81e"
     ],
     "currentFileId": "9cc7ec6d-c7c5-4b87-8e4e-c8e7fcfea81e",
     "resources": {
@@ -245,7 +244,7 @@
     "projectVersion": "1.0.0",
     "projectRegion": "us-east-1",
     "platform": "AWS",
-    "lastSave": 1540894859364
+    "lastSave": 1540894926375
   },
   "VCS_STATE": {
     "provider": "GitHub",
